--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,6 +27,7 @@
             <td><%= link_to book.title, book_path(book)%></td>
             <td><%= book.body %> </td>
             <td><%= render "favorites/fav", book:book %></td>
+            <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
           </tr>
           <% end %>
         </tbody>
