--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
           </td>
           <td><%= link_to book.title, book_path(book) %></td>
           <td><%= book.body %></td>
-          <td></td>
+          <td>コメント件数：<%= book.book_comments.count %></td>
         </tr>
         <% end %>
       </tbody>
