--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -10,6 +10,31 @@
       <th>introduction</th>
       <td><%= user.introduction %></td>
     </tr>
+   
+    <tr>
+      <th>Follows</th>
+      <td>
+        <%= link_to follows_user_path(user) do %>
+          <h6><%= user.followers.count %></h6>
+        <% end %> 
+      </td>
+    </tr>
+    <tr>  
+      <th>Followers</th>
+      <td>  
+        <%= link_to followers_user_path(user) do %>
+          <h6><%= user.followeds.count %></h6>
+        <% end %>
+      </td>
+    </tr> 
+      <% if current_user != user %>
+          <% if current_user.following?(user) %>
+            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-dark" %>
+          <% else %>
+            <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-info" %>
+          <% end %>
+      <% end %>
+      </td>
   </tbody>
 </table>
 <%= link_to edit_user_path(user) , class:"nav-link btn btn-outline-secondary btn-sm" do %>
