--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -12,26 +12,32 @@
     </tr>
    
     <tr>
-      <th>Follows</th>
+      <th>Follows <i class="fa-solid fa-person-rays"></i></th>
       <td>
         <%= link_to follows_user_path(user) do %>
-          <h6><%= user.followers.count %></h6>
+          <h6><%= user.followings.count %> </h6>
+          
         <% end %> 
       </td>
     </tr>
     <tr>  
-      <th>Followers</th>
+      <th>Followers <i class="fa-solid fa-street-view"></i></th>
       <td>  
         <%= link_to followers_user_path(user) do %>
-          <h6><%= user.followeds.count %></h6>
+          <h6><%= user.followers.count %> </h6>
         <% end %>
       </td>
+      
     </tr> 
       <% if current_user != user %>
           <% if current_user.following?(user) %>
-            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-dark" %>
+            <%= link_to user_relationships_path(user.id), method: :delete, class: "btn btn-secondary" do %>
+              <i class="fa-solid fa-user-minus"></i>
+            <% end %>
           <% else %>
-            <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-info" %>
+            <%= link_to user_relationships_path(user.id), method: :post, class:"btn btn-info" do %>
+              <i class="fa-solid fa-user-plus"></i>
+            <% end %>
           <% end %>
       <% end %>
       </td>
