--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,8 +21,22 @@
         <tr>
           <td><%= image_tag user.get_profile_image(80,80) %></td>
           <td><%= user.name %></td>
-          <td><%= link_to "Show", user_path(user)%> </td>
-          <td></td>
+          <td><%= link_to "Show", user_path(user), class: "btn btn-info"%> </td>
+          <td> <i class="fa-solid fa-street-view"></i><%= user.followers.count %></td>
+          <td> <i class="fa-solid fa-person-rays"></i><%= user.followings.count %></td>
+          <td>
+          <% if current_user != user %>
+            <% if current_user.following?(user) %>
+              <%= link_to user_relationships_path(user.id), method: :delete, class: "btn btn-secondary" do %>
+              <i class="fa-solid fa-user-minus"></i>
+            <% end %>
+            <% else %>
+               <%= link_to user_relationships_path(user.id), method: :post, class:"btn btn-info" do %>
+              <i class="fa-solid fa-user-plus"></i>
+            <% end %>
+            <% end %>
+          <% end %>
+          </td>
         </tr>
         <% end %>
       </tbody>
