--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
   <body>
     <%= render "layouts/header" %>
+    <div class="col-md-8 offset-md-1">
+      <%= render 'searches/search' %>
+    </div>
     <%= flash[:notice] %>
     <%= yield %>
     <%= render "layouts/footer" %>
