--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -7,8 +7,8 @@
             <tr>
               <th scope="col">image</th>
               <th scope="col">name</th>
-              <th scope="col">follow</th>
-              <th scope="col">follower</th>
+              <th scope="col">following</th>
+              <th scope="col">followers</th>
               <th scope="col"></th>
             </tr>
         </thead>
