--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,26 +1,21 @@
 <table class="table">
-  
+  <tbody> 
   <% book.book_comments.each do |book_comment| %>
-  <tr>
-    <td>
-      <%= image_tag book_comment.user.get_profile_image(80,80) %>
-      <br>
-      <%= link_to book_comment.user.name, user_path(book_comment.user) %>
-    </td>
-   <td> <%= book_comment.created_at.strftime('%Y/%m/%d') %></td>
-   <td> <%= book_comment.comment %> </td>
-  
-    
-    <% if book_comment.user_id == @current_user.id %> 
+    <tr>
       <td>
-       <%= link_to "削除", "/books/#{book.id}/book_comments/#{book_comment.id}", method: :delete, data: {confirm: "本当に消しますか？"}, class:"btn btn-danger" %>
+        <%= image_tag book_comment.user.get_profile_image(80,80) %><br>
+        <%= link_to book_comment.user.name, user_path(book_comment.user) %>
+      </td>
+      <td> <%= book_comment.created_at.strftime('%Y/%m/%d') %></td>
+      <td> <%= book_comment.comment %> </td>
+      <td>
+        <% if book_comment.user == current_user %> 
+          <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, data: {confirm: "本当に消しますか？"}, class:"btn btn-danger" %>
+        <% end %>
       </td> 
-    <% end %>
-  </tr>
+    </tr>
   <% end %>
+  </tbody>
 </table>
 
-  <%= form_with model: [book, book_comment] do |f| %>
-    <%= f.text_area :comment, placeholder: "コメントをここに", class:"form-control" %>
-    <%= f.submit "送信する", class:"btn btn-info" %>
-  <% end %>
+  
