--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,8 +19,9 @@
             <td>
               <%= @book.body %> 
             </td>
-            <td><%= render "favorites/fav", book:@book %></td>
-            <td>コメント件数：<%= @book.book_comments.count %></td>
+            <!--いいねボタン-->
+            <td id="favorite_button_<%= @book.id %>"><%= render "favorites/fav", book:@book %></td>
+            <td id="comment_count" ><%= render "book_comments/count" , book:@book %></td>
             <% if current_user == @book.user %>
             <td>
               <%= link_to "Edit", edit_book_path(@book) , class:"btn btn-btn btn-success" %>
@@ -32,8 +33,13 @@
           </tr>
         </tbody>
       </table>
+    <div id="book_comments">
       <%= render "book_comments/comment", book:@book, book_comment:@comment %>
+    </div> 
+    <div id="comment-form">
+      <%= render "book_comments/form" , { book: @book , book_comment: @comment } %>
     </div>
+   </div>
   </div>
 </div>
           
