--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col"></th>
+            <th scope="col">image</th>
             <th scope="col">Title</th>
             <th scope="col">Opinion</th>
             <th></th>
