--- a/app/views/book_comments/comment.js.erb
+++ b/app/views/book_comments/comment.js.erb
@@ -1,3 +1,3 @@
-$('#book_comments').html('<%= j render "book_comments/comment", book:@book, book_comment:@book_comment %>');
-$('#comment_count').html('<%= j render "book_comments/count", book:@book %>');
+$('#book_comments').html('<%= j(render "book_comments/comment", book:@book, book_comment:@book_comment) %>');
+$('#comment_count').html('<%= j(render "book_comments/count", book:@book) %>');
 $(".form-control").val('');
