--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,7 +32,7 @@
             <td><%= link_to book.title, book_path(book)%></td>
             <td><%= book.body %> </td>
             <!--いいねボタン-->
-            <td id="favorte_button_<%= book.id %>"><%= render "favorites/fav", book:book %></td>
+            <td id="favorite_button_<%= book.id %>"><%= render "favorites/fav", book:book %></td>
             <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
           </tr>
           <% end %>
